# panomap

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  entities.json
.github/workflows/: ci.yml
data/: .gitignore
data/HLA/graphs/: drb1-pggb.gfa
data/HLA/test_reads/: README.md  quick_r10_1k.blow5  quick_r10_1k.fasta  quick_r10_4k.fasta  quick_r10_4k.paf  quick_r9_1k.blow5  quick_r9_1k.fasta  quick_r9_1k.paf  quick_r9_2k.fasta  quick_r9_2k.paf  quick_r9_4k.blow5  quick_r9_4k.fasta  quick_r9_4k.paf
docs/: ARCHITECTURE.md  graph_indexing.md  graph_io.md  graph_transform.md  index_format.md  pore_model.md  pseudo_linearization.md  read_io.md  results_io.md  roadmap.md  seed-chaining.md  signal_processing.md  testing.md  threading.md  timing.md  vg_transformation.md
docs/tests/: index_pipeline_test_gap.md
examples/covid/: .gitignore  README.md  covid-pangenome.gfa  reads.blow5
include/: version.hpp.in
include/alignment/: chain_aligner.hpp  segment_aligner.hpp  signal_utils.hpp
include/base/commands/: index.hpp  inspect.hpp  map.hpp
include/base/index/: base_indexer.hpp
include/base/mapping/: base_mapper.hpp
include/base/seeder/: base_seeder.hpp
include/cli/: parse.hpp
include/commands/: annotate.hpp  eval.hpp  index.hpp  index_dbg.hpp  index_vg.hpp  map.hpp  mt_test.hpp
include/concurrency/: executor.hpp
include/core/concurrency/: executor.hpp
include/core/index/: bucket_seed_store.hpp  flat_graph.hpp  graph_store.hpp  linearizer.hpp  seed_store.hpp  simple_expand.hpp  sort_1d.hpp
include/core/mapping/: chainer.hpp  map_result.hpp  pan_chainer.hpp  path_chainer.hpp  seed_merger.hpp  sort_chainer.hpp
include/core/util/: kmer_hash.hpp  logging.hpp  metrics.hpp  signal_handlers.hpp  system_memory.hpp  timing.hpp  trace.hpp
include/index/: aln_graph.hpp  bucket_indexer.hpp  bucket_seed_store.hpp  flat_graph.hpp  graph_store.hpp  index_pipeline.hpp  linearizer.hpp  linearizer_factory.hpp  mmap_seed_store.hpp  node_first_indexer.hpp  path_guided_transform.hpp  path_walk_indexer.hpp  path_walk_linearizer.hpp  pseudo_linearize.hpp  seed_builder.hpp  seed_store.hpp  signal_store.hpp  simple_expand.hpp  sort_1d.hpp  squigglize.hpp  superbubble_linearizer.hpp  transform_dbg.hpp  vg_transform.hpp  vg_transform_factory.hpp
include/io/graphs/: gfa_exporter.hpp  gfa_loader.hpp  graph.hpp  graph_loader.hpp  graph_loader_factory.hpp  vg_loader.hpp
include/io/index/: serialization.hpp  simple_serialization.hpp
include/io/models/: model.hpp  (+1 more)
include/mapping/: anchor.hpp  anchor_expander.hpp  anchor_merger.hpp  batch_mapper.hpp  chain_result_converter.hpp  chainer.hpp  dp_chain_clusterer.hpp  dp_chainer.hpp  dp_chainer_config.hpp  graph_chainer.hpp  graph_chainer2.hpp  map_result.hpp  pan_chainer.hpp  path_chainer.hpp  result_formatter.hpp  seed_clusterer.hpp  seed_merger.hpp  sort_chainer.hpp
include/signal/: diff_filter.hpp  event_pipeline.hpp  signal_types.hpp
include/util/: logging.hpp  metrics.hpp  signal_handlers.hpp  system_memory.hpp  timing.hpp  trace.hpp
reproduce/: README.md  run_covid.sh  run_hla-drb1.sh  run_yeast.sh  run_zymo.sh
reproduce/eval/: eval_binary.py  eval_drb1_recall.py  eval_zymo.py
scripts/: README.md  concat_gfa_components.py  eval_1d_precision.py  eval_canonical.py  fa2gfa.py  fasta_stats.py  generate_eval_reads.sh  gfa_path_lengths.py  plot_anchor_cloud.py  plot_anchor_heatmap.py  plot_signal_alignment.py  run_eval_pipeline.sh
src/: main.cpp
src/alignment/: chain_aligner.cpp  path_guided_dtw_aligner.cpp  radius_gdtw_aligner.cpp
src/cli/: base_main.cpp  parse.cpp  signal_main.cpp
src/commands/: annotate.cpp  eval.cpp  index.cpp  index_dbg.cpp  index_vg.cpp  inspect.cpp  map.cpp  mt_test.cpp
src/concurrency/: executor.cpp
src/index/: aln_graph.cpp  bucket_indexer.cpp  flat_graph.cpp  index_pipeline.cpp  linearizer_factory.cpp  mmap_seed_store.cpp  node_first_indexer.cpp  path_guided_transform.cpp  path_walk_indexer.cpp  path_walk_linearizer.cpp  pseudo_linearize.cpp  seed_builder.cpp  simple_expand.cpp  sort_1d.cpp  squigglize.cpp  superbubble_linearizer.cpp  transform_dbg.cpp  vg_transform_factory.cpp
src/mapping/: anchor_expander.cpp  anchor_merger.cpp  batch_mapper.cpp  chain_result_converter.cpp  chainer_factory.cpp  dp_chain_clusterer.cpp  dp_chainer.cpp  graph_chainer.cpp  graph_chainer2.cpp  pan_chainer.cpp  path_chainer.cpp  result_formatter.cpp  seed_clusterer_factory.cpp  seed_merger.cpp  sort_chainer.cpp
src/signal/: diff_filter.cpp  event_pipeline_factory.cpp
src/util/: signal_handlers.cpp  system_memory.cpp  timing.cpp  trace.cpp
tests/: CMakeLists.txt  README.md  test_alignment.cpp  test_aln_graph.cpp  test_anchor_expander.cpp  test_bucket_indexer.cpp  test_cli.cpp  test_dp_chain_clusterer.cpp  test_dp_chainer.cpp  test_gfa_exporter.cpp  test_graphs.cpp  test_index_pipeline.cpp  test_linearizers.cpp  test_logging.cpp  test_mapping_batch.cpp  test_metrics.cpp  test_models.cpp  test_path_chainer.cpp  test_path_guided_transform.cpp  test_reads.cpp  test_results.cpp  test_seed_merger.cpp  test_serialization.cpp  test_signal_alignment_quantize.cpp  test_signal_events.cpp  test_signal_fuzzy_quantize.cpp  test_signal_mocks.cpp  test_signal_normalizers.cpp  test_signal_seed_extractors.cpp  test_signal_tokenize.cpp
tests/data/HLA/test_reads/: quick_r10_1k.paf  quick_r10_4k.blow5  quick_r9_2k.blow5
tests/data/graphs/: .gitignore  DRB1-3123-dbg.gfa  dbg_test.gfa  dbg_test_2.gfa  drb1.gfa  drb1.vg  sample.gfa
tests/data/models/: r10_sample.txt  r9_sample.model
tests/fixtures/oracle_v2/: covid-N1.gaf  covid-N2.gaf  covid-N4.gaf  covid-N8.gaf  yeast-N1.gaf  yeast-N4.gaf
tests/integration/: test_covid_accuracy.sh  test_covid_landmark_viral.sh  test_covid_viral.sh  test_drb1_accuracy.sh  test_drb1_landmark.sh  test_drb1_landmark_pan_chain.sh  test_drb1_landmark_sort_chain.sh  test_drb1_pan_chain.sh  test_drb1_sort_chain.sh  test_index_oracle.sh
tools/: generate_builtin_models.py
tools/panolayout/: CMakeLists.txt  coords_to_steps.py  panolayout.cpp  plot_bp_vs_1d.py
(+156 files in other folders)
